RESOLVED FIXED53622
Assert WebBackForwardList's current index is valid to help catch errors
https://bugs.webkit.org/show_bug.cgi?id=53622
Summary Assert WebBackForwardList's current index is valid to help catch errors
Adam Roben (:aroben)
Reported 2011-02-02 13:18:37 PST
Assert one of WebBackForwardList's invariants is true to help catch errors
Attachments
Patch (7.69 KB, patch)
2011-02-02 13:22 PST, Adam Roben (:aroben)
beidson: review+
Adam Roben (:aroben)
Comment 1 2011-02-02 13:22:51 PST
Adam Roben (:aroben)
Comment 2 2011-02-02 14:40:25 PST
Note You need to log in before you can comment on or make changes to this bug.