third_party/WebKit/Source/WebKit2/UIProcess/WebBackForwardList.cpp
@@ -32,7 +32,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace WebKit {
 
 static const unsigned DefaultCapacity = 100;
-static const unsigned NoCurrentItemIndex = UINT_MAX;
 
 WebBackForwardList::WebBackForwardList(WebPageProxy* page)
     : m_page(page)
@@ -41,6 +40,7 @@ WebBackForwardList::WebBackForwardList(WebPageProxy* page)
     , m_closed(true)
     , m_enabled(true)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
 }
 
 WebBackForwardList::~WebBackForwardList()
@@ -60,6 +60,8 @@ void WebBackForwardList::pageClosed()
 
 void WebBackForwardList::addItem(WebBackForwardListItem* newItem)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     if (m_capacity == 0 || !m_enabled)
         return;
 
@@ -87,10 +89,14 @@ void WebBackForwardList::addItem(WebBackForwardListItem* newItem)
 
     if (m_page)
         m_page->didChangeBackForwardList();
+
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
 }
 
 void WebBackForwardList::goToItem(WebBackForwardListItem* item)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     if (!m_entries.size() || !item)
         return;
         
@@ -108,6 +114,8 @@ void WebBackForwardList::goToItem(WebBackForwardListItem* item)
 
 WebBackForwardListItem* WebBackForwardList::currentItem()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     if (m_current != NoCurrentItemIndex)
         return m_entries[m_current].get();
     return 0;
@@ -115,6 +123,8 @@ WebBackForwardListItem* WebBackForwardList::currentItem()
 
 WebBackForwardListItem* WebBackForwardList::backItem()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     if (m_current && m_current != NoCurrentItemIndex)
         return m_entries[m_current - 1].get();
     return 0;
@@ -122,6 +132,8 @@ WebBackForwardListItem* WebBackForwardList::backItem()
 
 WebBackForwardListItem* WebBackForwardList::forwardItem()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     if (m_entries.size() && m_current < m_entries.size() - 1)
         return m_entries[m_current + 1].get();
     return 0;
@@ -129,6 +141,8 @@ WebBackForwardListItem* WebBackForwardList::forwardItem()
 
 WebBackForwardListItem* WebBackForwardList::itemAtIndex(int index)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     // Do range checks without doing math on index to avoid overflow.
     if (index < -static_cast<int>(m_current))
         return 0;
@@ -141,16 +155,22 @@ WebBackForwardListItem* WebBackForwardList::itemAtIndex(int index)
 
 int WebBackForwardList::backListCount()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     return m_current == NoCurrentItemIndex ? 0 : m_current;
 }
 
 int WebBackForwardList::forwardListCount()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     return m_current == NoCurrentItemIndex ? 0 : static_cast<int>(m_entries.size()) - (m_current + 1);
 }
 
 PassRefPtr<ImmutableArray> WebBackForwardList::backListAsImmutableArrayWithLimit(unsigned limit)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     unsigned backListSize = static_cast<unsigned>(backListCount());
     unsigned size = std::min(backListSize, limit);
     if (!size)
@@ -168,6 +188,8 @@ PassRefPtr<ImmutableArray> WebBackForwardList::backListAsImmutableArrayWithLimit
 
 PassRefPtr<ImmutableArray> WebBackForwardList::forwardListAsImmutableArrayWithLimit(unsigned limit)
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     unsigned size = std::min(static_cast<unsigned>(forwardListCount()), limit);
     if (!size)
         return ImmutableArray::create();
@@ -185,6 +207,8 @@ PassRefPtr<ImmutableArray> WebBackForwardList::forwardListAsImmutableArrayWithLi
 
 void WebBackForwardList::clear()
 {
+    ASSERT(m_current == NoCurrentItemIndex || m_current < m_entries.size());
+
     size_t size = m_entries.size();
     if (size <= 1)
         return;
