third_party/WebKit/Source/WebKit2/UIProcess/WebBackForwardList.h
@@ -84,6 +84,8 @@ public:
 #endif
 
 private:
+    static const unsigned NoCurrentItemIndex = UINT_MAX;
+
     WebBackForwardList(WebPageProxy*);
 
     virtual Type type() const { return APIType; }
